--- a/Project/template.tex
+++ b/Project/template.tex
@@ -1,4 +1,3 @@
-
 \begin{filecontents*}{example.eps}
 
 gsave
@@ -107,21 +106,21 @@ This result shows that the major numbers of applications is related to Family.
 \label{fig:3}
 \end{figure}	
 
-\section*{Summary}
-Here you can see histogram of...
+section*{Update}
+\subsection*{Number of Application Update}
+From the survey carried out, Family, Tools, and Business have the most updated numbers of applications which reaches around 800 in 2018. While, Dating and Comics have less updated compared to others. (Figure 2)  
 \begin{figure}
 \centering
-\includegraphics[width=10cm,height=10cm]{pic/Summary_figure}
+\includegraphics[width=10cm,height=10cm]{pic/counter_plot}
 \caption{Histogram of data }
 \label{fig:3}
 \end{figure}
 
-
-\section*{Category}
-
+\subsection*{Different Months of Application Update}
+This figure represents the update of application based on the differences between months and years. The highest rate of update is belonged to month of July in 2018. As shown in Figure 3, in 2018, there is a great trend of update compared to other years.  
 \begin{figure}
 \centering
-\includegraphics[width=10cm,height=10cm]{pic/category_figure}
+\includegraphics[width=10cm,height=10cm]{pic/heatmap_2}
 \caption{... }
 \label{fig:3}
 \end{figure}
