Adding Growth of Application Numbers from 2016-2018 section

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -1,3 +1,4 @@
+
 \begin{filecontents*}{example.eps}
 
 gsave
@@ -83,8 +84,8 @@ The aim of this project is:
 \item Assessing supported Android version with numbers of reviews based on different categories.\\
 \end{itemize}
 
-\section*{Pie chart}
-In our dataset we have more than 9000 applications. The pie chart below represents top 20 application categories based on application number.
+\section*{Categories of Applications}
+In our dataset we have more than 9000 applications. The pie chart represents top 20 application categories based on application number. (Figure 1)
 \begin{itemize}
 \item
   Family is included of 1832  numbers of applications.
@@ -102,28 +103,40 @@ This result shows that the major numbers of applications is related to Family.
 \begin{figure}
 \centering
 \includegraphics[width=10cm,height=10cm]{pic/pie_chart}
-\caption{Pie chaer}
-\label{fig:3}
+\caption{Top 20 Application Categories Based on Application Number}
+\label{fig:1}
+\end{figure}
+
+\section*{Growth of Application Numbers from 2016-2018}
+According to bar chart, (Figure 2), we can see the growth of application numbers which are categorized in different years. Most of the applications have grown in all three years from 2016-2018.
+Family reached to the top of growth around 200, 400, and 800 in 2016, 2017, and 2018 respectively. The fllowing highest application number in all three years are belonged to Tools and Business.
+
+\begin{figure}
+\centering
+\includegraphics[width=15cm,height=7cm]{pic/cat_plot}
+\caption{Gnre (Everyone) vs No. of Application Got Updated in 2018} 
+\label{fig:2}
 \end{figure}	
 
-section*{Update}
+\section*{update}
 \subsection*{Number of Application Update}
-From the survey carried out, Family, Tools, and Business have the most updated numbers of applications which reaches around 800 in 2018. While, Dating and Comics have less updated compared to others. (Figure 2)  
+From the survey carried out, Family, Tools, and Business have the most updated numbers of applications which reaches around 800 in 2018. While, Dating and Comics have less updated compared to others. (Figure 3)  
 \begin{figure}
 \centering
 \includegraphics[width=10cm,height=10cm]{pic/counter_plot}
-\caption{Histogram of data }
+\caption{... }
 \label{fig:3}
 \end{figure}
 
 \subsection*{Different Months of Application Update}
-This figure represents the update of application based on the differences between months and years. The highest rate of update is belonged to month of July in 2018. As shown in Figure 3, in 2018, there is a great trend of update compared to other years.  
+This figure represents the update of application based on the differences between months and years. The highest rate of update is belonged to month of July in 2018. As shown in Figure 3, in 2018, there is a great trend of update compared to other years. (Figure 4)
 \begin{figure}
 \centering
 \includegraphics[width=10cm,height=10cm]{pic/heatmap_2}
 \caption{... }
-\label{fig:3}
+\label{fig:4}
 \end{figure}
+
 
 \end{document}
 % end of file template.tex
