Adding Andriod Version part. (box_plot figure)

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -102,14 +102,14 @@ In our dataset we have more than 9000 applications. The pie chart represents top
 This result shows that the major numbers of applications is related to Family.
 \begin{figure}
 \centering
-\includegraphics[width=10cm,height=10cm]{pic/pie_chart}
+\includegraphics[width=7cm,height=7cm]{pic/pie_chart}
 \caption{Top 20 Application Categories Based on Application Number}
 \label{fig:1}
 \end{figure}
 
 \section*{Growth of Application Numbers from 2016-2018}
 According to bar chart, (Figure 2), we can see the growth of application numbers which are categorized in different years. Most of the applications have grown in all three years from 2016-2018.
-Family reached to the top of growth around 200, 400, and 800 in 2016, 2017, and 2018 respectively. The fllowing highest application number in all three years are belonged to Tools and Business.
+Family reached to the top of growth around 200, 400, and 800 in 2016, 2017, and 2018 respectively. The following highest application number in all three years are belonged to Tools and Business.
 
 \begin{figure}
 \centering
@@ -135,6 +135,22 @@ This figure represents the update of application based on the differences betwee
 \includegraphics[width=10cm,height=10cm]{pic/heatmap_2}
 \caption{... }
 \label{fig:4}
+\end{figure}
+
+\section*{Android Version}
+\subsection*{Supported Android Version and User Reviews}
+ According to the survey, the box plot (Figure 5) shows the numbers of user review and Android version.
+ \begin{itemize}
+\item The greatest distribution of number of reviews in Family application is related to Mature 17+ (red) in version 4.0 and up.\\
+\item The smallest distribution of number of reviews in Family application is related to Mature 17+(red) and Everyone (blue) in version 5 and 2.3.3 and up.\\
+\item In almost many versions, Everyone (blue) and Teen (green) are seen in reviewing.\\
+\item The smallest numbers of review is related to Everyone 10+ (orange) \\
+\end{itemize}
+\begin{figure}
+\centering
+\includegraphics[width=10cm,height=10cm]{pic/box_plot}
+\caption{Family Applications with Supported Android Version and User Reviews}
+\label{fig:5}
 \end{figure}
 
 
