adding description about Supported Android Version with No. reviews based on Game

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -138,21 +138,20 @@ This figure represents the update of application based on the differences betwee
 \end{figure}
 
 \section*{Android Version}
-\subsection*{Supported Android Version and User Reviews}
- According to the survey, the box plot (Figure 5) shows the numbers of user review and Android version.
- \begin{itemize}
-\item The greatest distribution of number of reviews in Family application is related to Mature 17+ (red) in version 4.0 and up.\\
-\item The smallest distribution of number of reviews in Family application is related to Mature 17+(red) and Everyone (blue) in version 5 and 2.3.3 and up.\\
-\item In almost many versions, Everyone (blue) and Teen (green) are seen in reviewing.\\
-\item The smallest numbers of review is related to Everyone 10+ (orange) \\
+\subsection*{Supported Android Version with No. reviews based on Game}
+This graph describes the supported Android version with number of reviews based on game.
+\begin{itemize}
+\item The majority number of reviews are belonged to version of 4.1, 4.0.3, 2.3, 4.0, 4.4 and up.\\
+\item Among Everyone (orange dot) and Teen (red dot), 4.1,4.0.3, and 2.3 are seen significantly.\\
+\item Some versions which are less than two have no review as shown in the figure.\\
 \end{itemize}
+
 \begin{figure}
 \centering
-\includegraphics[width=10cm,height=10cm]{pic/box_plot}
-\caption{Family Applications with Supported Android Version and User Reviews}
+\includegraphics[width=10cm,height=10cm]{pic/swarm_plot}
+\caption{Supported Android Version with No. reviews based on Game}
 \label{fig:5}
 \end{figure}
-
 
 \end{document}
 % end of file template.tex
