adding rating section

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -1,4 +1,3 @@
-
 \begin{filecontents*}{example.eps}
 
 gsave
@@ -153,6 +152,15 @@ This graph describes the supported Android version with number of reviews based 
 \label{fig:5}
 \end{figure}
 
+\section*{Rating}
+\subsection*{Average Rating and Std. Devision of Application Categories}
+This figure indicates the average rating of application categories. This figure is trying to compare rating of different applications. In fact all the applications have the same range of rating above 4. The rating of all application are so close to each other in all categories.
+\begin{figure}
+\centering
+\includegraphics[width=15cm,height=7cm]{pic/mean_plot}
+\caption{Average Rating and Std. Devision of Application Categories} 
+\label{fig:6}
+\end{figure}
 \end{document}
 % end of file template.tex
 
