adding subsection Application Rating Vs. No. of Applications.

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -161,6 +161,15 @@ This figure indicates the average rating of application categories. This figure 
 \caption{Average Rating and Std. Devision of Application Categories} 
 \label{fig:6}
 \end{figure}
+
+\subsection*{Application Rating Vs. No. of Applications }
+According to the figure 7, there is a relationship between number of installation and rating:
+\begin{itemize}
+\item The more rating, the more number of application installed\\
+\item The most number of application ratings are ranged from 3.3 to 5 .\\
+\item The most number of application installations are ranged between 10$^{3}$  to 10$^{5}$\\
+\end{itemize}
+
 \end{document}
 % end of file template.tex
 
