a minor change in Application Rating Vs. No. of Applications

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -169,6 +169,12 @@ According to the figure 7, there is a relationship between number of installatio
 \item The most number of application ratings are ranged from 3.3 to 5 .\\
 \item The most number of application installations are ranged between 10$^{3}$  to 10$^{5}$\\
 \end{itemize}
+\begin{figure}
+\centering
+\includegraphics[width=15cm,height=7cm]{pic/mean_plot}
+\caption{Application Rating Vs. No. of Applications} 
+\label{fig:7}
+\end{figure}
 
 \end{document}
 % end of file template.tex
