changing categories of applications

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -84,7 +84,7 @@ The aim of this project is:
 \end{itemize}
 
 \section*{Categories of Applications}
-In our dataset we have more than 9000 applications. The pie chart represents top 20 application categories based on application number. (Figure 1)
+In our dataset we have more than 9000 applications. The pie chart represents top 20 application categories based on application number. The top number of application is belonged to family. The following high number of applications are related to Game, Tools, and Business respectively. The result indicates that more users are interested in the four top categories and most of the developers put more emphasis on improving them.
 \begin{itemize}
 \item
   Family is included of 1832  numbers of applications.
