adding Rating in each year subsection

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -162,6 +162,15 @@ This figure indicates the average rating of application categories. This figure 
 \label{fig:6}
 \end{figure}
 
+\subsection*{7.2 Rating in each year}
+From 2016 to 2018, the rate of applications is around 4 to 5. Also, it is axiomatic that it has increased slightly in all these three years and there is e subtle difference among them. In 2018, it started from 4.075 and it reached to nearly 4.22. (Figure ~\ref{fig:7})
+\begin{figure}
+\centering
+\includegraphics[width=10cm,height=5cm]{pic/bar_scatter_plot_Rating}
+\caption{Rating in each year} 
+\label{fig:7}
+\end{figure}
+
 \subsection*{Application Rating Vs. No. of Applications }
 According to the figure 7, there is a relationship between number of installation and rating:
 \begin{itemize}
