--- a/Project/template.tex
+++ b/Project/template.tex
@@ -185,6 +185,15 @@ According to the figure 7, there is a relationship between number of installatio
 \label{fig:7}
 \end{figure}
 
+\section*{8. Average Size of applications}
+The bar chart (Figure ~\ref{fig:9}) represents the average size of applications. Through all the applications, Game is considered as a huge average size. The other applications such as Travel, Sports, Family, Education, and entertainment have occupied the following big size.
+\begin{figure}
+\centering
+\includegraphics[width=10cm,height=6cm]{pic/average_size}
+\caption{Avg. Size by Categories} 
+\label{fig:9}
+\end{figure}
+
 \end{document}
 % end of file template.tex
 
