changing jitter part

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -171,18 +171,19 @@ From 2016 to 2018, the rate of applications is around 4 to 5. Also, it is axioma
 \label{fig:7}
 \end{figure}
 
-\subsection*{Application Rating Vs. No. of Applications }
-According to the figure 7, there is a relationship between number of installation and rating:
+\subsection*{7.3 Application Rating Vs. No. of Applications }
+According to the Figure ~\ref{fig:8}, there is a relationship between number of installation and rating:
 \begin{itemize}
-\item The more rating, the more number of application installed\\
+\item The more rating, the more number of application installed.\\
 \item The most number of application ratings are ranged from 3.3 to 5 .\\
-\item The most number of application installations are ranged between 10$^{3}$  to 10$^{5}$\\
+\item The most number of application installations are ranged between 10$^{3}$  to 10$^{5}$.\\
 \end{itemize}
+
 \begin{figure}
 \centering
-\includegraphics[width=15cm,height=7cm]{pic/mean_plot}
+\includegraphics[width=10cm,height=6cm]{pic/jitter}
 \caption{Application Rating Vs. No. of Applications} 
-\label{fig:7}
+\label{fig:8}
 \end{figure}
 
 \section*{8. Average Size of applications}
