adding Free Applications section

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -195,6 +195,17 @@ The bar chart (Figure ~\ref{fig:9}) represents the average size of applications.
 \label{fig:9}
 \end{figure}
 
+
+\section*{9. Free Applications}
+\subsection*{9.1 Free Applications Percentage in Each Year}
+The Pie chart (Figure ~\ref{fig:10}) presents the growth trend of free applications from 2016 to 2018. In 2016, it started by 16\% and in following years the percentage of free applications has increased and reached to the 50\%. It shows that the developers invested more on free applications in 2018.
+\begin{figure}
+\centering
+\includegraphics[width=10cm,height=5cm]{pic/pie_plot_freeApp}
+\caption{Free Applications Percentage in Each Year} 
+\label{fig:10}
+\end{figure}
+
 \end{document}
 % end of file template.tex
 
