adding Application Rating Vs. Number of Price subsection

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -206,6 +206,15 @@ The Pie chart (Figure ~\ref{fig:10}) presents the growth trend of free applicati
 \label{fig:10}
 \end{figure}
 
+\subsection*{9.2 Application Rating Vs. Number of Price}
+This graph (Figure ~\ref{fig:11}) shows the relationship between installation and price. It presents the more installation, the less price is valued. Free application has the highest installation through all applications. Moreover, the graph clearly displays the increase of price leads users less download the application.
+\begin{figure}
+\centering
+\includegraphics[width=10cm,height=7cm]{pic/jitter2}
+\caption{Application Rating Vs. No. of Price} 
+\label{fig:11}
+\end{figure}
+
 \end{document}
 % end of file template.tex
 
