adding Category Vs. Number of Applications Based on Android Versions subsection

--- a/Project/template.tex
+++ b/Project/template.tex
@@ -145,6 +145,15 @@ This graph describes the supported Android version with number of reviews based 
 \item Some versions which are less than two have no review as shown in the figure.\\
 \end{itemize}
 
+\subsection*{6.2 Category Vs. Number of Applications Based on Android Versions}
+As we can see in figure ~\ref{fig:12}, there is a relationship between application classification and version of Android. The version of 4.1 and up has the highest usage in Family applications which is reached to above 400. Additionally, it can be seen that the Family category has the most diversity of version compare with other categories. Version 5.0-6.0, 5.0-7.1.1, and 5.0-8.0 has their lowest usage among all applications.
+\begin{figure}
+\centering
+\includegraphics[width=10cm,height=7cm]{pic/heatmap_1}
+\caption{Category Vs. No. of Apps Based on Android Versions} 
+\label{fig:12}
+\end{figure}
+
 \begin{figure}
 \centering
 \includegraphics[width=10cm,height=10cm]{pic/swarm_plot}
