--- a/Project/template.tex
+++ b/Project/template.tex
@@ -113,7 +113,7 @@ Family reached to the top of growth around 200, 400, and 800 in 2016, 2017, and 
 \begin{figure}
 \centering
 \includegraphics[width=15cm,height=7cm]{pic/cat_plot}
-\caption{Gnre (Everyone) vs No. of Application Got Updated in 2018} 
+\caption{Growth of Application Numbers from 2016-2018} 
 \label{fig:2}
 \end{figure}	
 
@@ -123,7 +123,7 @@ From the survey carried out, Family, Tools, and Business have the most updated n
 \begin{figure}
 \centering
 \includegraphics[width=10cm,height=10cm]{pic/counter_plot}
-\caption{... }
+\caption{Gnre (Everyone) vs No. of Application Got Updated in 2018}
 \label{fig:3}
 \end{figure}
 
@@ -132,7 +132,7 @@ This figure represents the update of application based on the differences betwee
 \begin{figure}
 \centering
 \includegraphics[width=10cm,height=10cm]{pic/heatmap_2}
-\caption{... }
+\caption{Application Got Update (in Month)}
 \label{fig:4}
 \end{figure}
 
