--- a/Project/Report.tex
+++ b/Project/Report.tex
@@ -1,68 +1,20 @@
-\begin{filecontents*}{example.eps}
+\documentclass{article}
+\usepackage[utf8]{inputenc}
+\usepackage{graphicx} % includegraphics command is implemented here
+\title{
+Google Play Store Analysis\\
+CMSC6950 \\
+Computer Based Research Tools and Applications
+}
 
-gsave
-newpath
-  20 20 moveto
-  20 220 lineto
-  220 220 lineto
-  220 20 lineto
-closepath
-2 setlinewidth
-gsave
-  .4 setgray fill
-grestore
-stroke
-grestore
-\end{filecontents*}
-%
-\RequirePackage{fix-cm}
-%
-%\documentclass{svjour3}                     % onecolumn (standard format)
-%\documentclass[smallcondensed]{svjour3}     % onecolumn (ditto)
-\documentclass[smallextended]{svjour3}       % onecolumn (second format)
-%\documentclass[twocolumn]{svjour3}          % twocolumn
-%
-\smartqed  % flush right qed marks, e.g. at end of proof
-%
-\usepackage{graphicx}
-\usepackage{cite}
-\usepackage[a4paper]{geometry}
+\author{Khosh Raftar Nouri, Aida  (akhoshraftar)\and
+Salcedo, Carlos (cdsalcedo) \and
+Sarker, Sourav (souravs)\and
+Yazdanpanah, Fatemeh ( fyazdanpanah)} \date{June 2019}
 
 \begin{document}
 
-\title{Google Play Store Analysis}%\thanks{Grants or other notes
-%about the article that should go on the front page should be
-%placed here. General acknowledgments should be placed at the end of the article.}
-
-%\subtitle{Do you have a subtitle?\\ If so, write it here}
-
-%\titlerunning{Short form of title}        % if too long for running head
-
-\author{Khosh Raftar Nouri, Aida        \and
-        Salcedo, Carlos \and
-Sarker, Sourav \and
-Yazdanpanah, Fatemeh} %etc.
-%}
-
-%\authorrunning{Short form of author list} % if too long for running head
-
-\institute{akhoshraftar@mun.ca\\
-             cdsalcedo@mun.ca \\
-              souravs@mun.ca\\
-              fyazdanpanah@mun.ca\\
-                       %  \\
-%             \emph{Present address:} of F. Author  %  if needed
-    %       \and
-        %   S. Author \at
-            %  second address
-}
-
-\date{Received: date / Accepted: date}
-% The correct dates will be entered by the editor
-
-
 \maketitle
-
 
 \section*{Introduction to data}
 
